Fixed minor issue with closed eyelid alignment

--- a/src/style.css
+++ b/src/style.css
@@ -216,7 +216,7 @@ p:last-child {
   left: -4%;
   right: -4%;
   top: -4%;
-  bottom: -6%;
+  bottom: -8%;
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center top;
